pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotlin-service
spec:
  type: NodePort  # 외부에 Pod를 어떤 형태로 노출할지 결정
  ports:
  - port: 80  # 외부에 노출할 포트
    name: http
    targetPort: 8000 # 컨테이너의 포트
    protocol: TCP
    nodePort: 30001
  - port: 8080
    name: api
    targetPort: 8080
    protocol: TCP
    nodePort: 30002
  selector:
    app: kotlin-pod # pod 의 메타데이터 라벨 이름
